started bias-variance functions

--- a/ExperimentRunning.ipynb
+++ b/ExperimentRunning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1431,36 +1431,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'MajorityClassSize': 218,\n",
-       " 'MaxNominalAttDistinctValues': -1,\n",
-       " 'MinorityClassSize': 199,\n",
-       " 'NumberOfClasses': 4,\n",
-       " 'NumberOfFeatures': 19,\n",
-       " 'NumberOfInstances': 846,\n",
-       " 'NumberOfInstancesWithMissingValues': 0,\n",
-       " 'NumberOfMissingValues': 0,\n",
-       " 'NumberOfNumericFeatures': 18,\n",
-       " 'NumberOfSymbolicFeatures': 1,\n",
-       " 'did': 54,\n",
+       "{'MajorityClassSize': 37155,\n",
+       " 'MaxNominalAttDistinctValues': 41,\n",
+       " 'MinorityClassSize': 11687,\n",
+       " 'NumberOfClasses': 2,\n",
+       " 'NumberOfFeatures': 15,\n",
+       " 'NumberOfInstances': 48842,\n",
+       " 'NumberOfInstancesWithMissingValues': 3620,\n",
+       " 'NumberOfMissingValues': 6465,\n",
+       " 'NumberOfNumericFeatures': 2,\n",
+       " 'NumberOfSymbolicFeatures': 13,\n",
+       " 'did': 179,\n",
        " 'format': 'ARFF',\n",
-       " 'name': 'vehicle',\n",
+       " 'name': 'adult',\n",
        " 'status': 'active'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from LocalDatasets import readDict\n",
-    "readDict(54)"
+    "readDict(179)"
    ]
   },
   {
@@ -1685,22 +1685,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'saveSingleDict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-2e73eaf53dae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mclfName\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'RandomForestClassifier'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mtempS\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtempG\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtempP\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mduration\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv_scores_scales\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mclf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcv\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mamount\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0minformation\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0msaveSingleDict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtempS\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mclfName\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mamount\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'scores'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0msaveSingleDict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtempG\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mclfName\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mamount\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'SummaryGuesses'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0msavePredictsScore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtempP\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mclfName\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mamount\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Predictions'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'saveSingleDict' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from LocalDatasets import read_did\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from Testing import cv_scores_scales\n",
+    "X,y = read_did(1596)\n",
+    "cv = 10\n",
+    "amount = 512\n",
+    "information = 3\n",
+    "func = 'cvScoreScales'\n",
+    "clf = RandomForestClassifier()\n",
+    "clfName = 'RandomForestClassifier'\n",
+    "tempS,tempG,tempP,duration = cv_scores_scales(X,y,clf,cv,amount,information)\n",
+    "saveSingleDict(tempS,func,clfName,amount,i,'scores')\n",
+    "saveSingleDict(tempG,func,clfName,amount,i,'SummaryGuesses')\n",
+    "savePredictsScore(tempP,func,clfName,amount,i,'Predictions')\n",
+    "saveSingleDict([duration],func,clfName,did,amount,'duration' + str(count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8192\n",
+      "16384\n"
+     ]
+    }
+   ],
+   "source": [
+    "from completeRun import cv_scores_BrainWebb\n",
+    "did = 1596\n",
+    "cv = 10\n",
+    "amount = 1024\n",
+    "typ = 0\n",
+    "for i in range(3,5):\n",
+    "    print(amount*2**i)\n",
+    "    cv_scores_BrainWebb(did,cv,amount*2**i,typ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+       "40"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "amountList"
+    "5*2**3"
    ]
   },
   {
