--- a/ExperimentRunning.ipynb
+++ b/ExperimentRunning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,104 +1009,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'NB'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clfName[len(clfName)-2:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gas = []\n",
-    "gas.append(RandomForestClassifier())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gas.append(SVC(kernel = 'rbf'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
-       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "            n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
-       "            verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gas[0].fit(X,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape=None, degree=3, gamma='auto', kernel='rbf',\n",
-       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "  tol=0.001, verbose=False)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gas[1].fit(X,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf2 = []\n",
-    "for clfName in clfNames:\n",
-    "        clf2.append(csd(clfName))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -1314,157 +1216,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "range(1, 36)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "amountList"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1138688\n",
-      "671744\n",
-      "-536576\n",
-      "-143360\n",
-      "1273856\n",
-      "454656\n",
-      "-315392\n",
-      "1327104\n",
-      "-1019904\n",
-      "2215936\n",
-      "-1097728\n",
-      "-3371008\n",
-      "786432\n",
-      "2670592\n",
-      "-872448\n",
-      "-352256\n",
-      "368640\n",
-      "44208128\n",
-      "-2154496\n",
-      "-12120064\n",
-      "12595200\n",
-      "8802304\n",
-      "-831488\n",
-      "2961408\n",
-      "434176\n",
-      "-356352\n",
-      "-1220608\n",
-      "2461696\n",
-      "-192512\n",
-      "-1187840\n",
-      "-1810432\n",
-      "-712704\n"
-     ]
-    }
-   ],
-   "source": [
-    "import psutil\n",
-    "from completeRun import featureClf\n",
-    "from LocalDatasets import readDict\n",
-    "from utils import stopwatch\n",
-    "did = 10\n",
-    "cv = 10\n",
-    "typ = 0\n",
-    "#psutil.virtual_memory()\n",
-    "time2 = []\n",
-    "time3 = []\n",
-    "for amount in range(1,readDict(did)['NumberOfFeatures']-2):\n",
-    "    time1 = psutil.cpu_times().dpc\n",
-    "    featureClf(10,cv,amount,typ)\n",
-    "    time2.append(psutil.cpu_times().dpc - time1)\n",
-    "    with stopwatch() as sw:\n",
-    "        featureClf(10,cv,amount,typ)\n",
-    "    time3.append(sw.duration)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-2.6120791535580565\n",
-      "-2.549746125332206\n",
-      "-2.594410179263832\n",
-      "-2.648527735779453\n",
-      "-2.636649603494675\n",
-      "-2.5167379407474186\n",
-      "-2.4514441340117514\n",
-      "-2.4455957765969742\n",
-      "-2.4343324442546646\n",
-      "-2.3852245120057773\n",
-      "-2.4367982317621113\n",
-      "-2.4931532143799586\n",
-      "-2.539968454979771\n",
-      "-2.468697784108599\n",
-      "-2.5289634833522996\n",
-      "-2.2503362892741734\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(0,len(time2)):\n",
-    "    print(time2[i]-time3[i])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'MajorityClassSize': 37155,\n",
-       " 'MaxNominalAttDistinctValues': 41,\n",
-       " 'MinorityClassSize': 11687,\n",
-       " 'NumberOfClasses': 2,\n",
-       " 'NumberOfFeatures': 15,\n",
-       " 'NumberOfInstances': 48842,\n",
-       " 'NumberOfInstancesWithMissingValues': 3620,\n",
-       " 'NumberOfMissingValues': 6465,\n",
-       " 'NumberOfNumericFeatures': 2,\n",
-       " 'NumberOfSymbolicFeatures': 13,\n",
-       " 'did': 179,\n",
-       " 'format': 'ARFF',\n",
-       " 'name': 'adult',\n",
-       " 'status': 'active'}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from LocalDatasets import readDict\n",
-    "readDict(179)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -1640,13 +1391,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
@@ -1711,141 +1455,6 @@
     "for i in range(3,5):\n",
     "    print(amount*2**i)\n",
     "    cv_scores_BrainWebb(did,cv,amount*2**i,typ)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "40"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5*2**3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-f664a78f3ef0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
-     ]
-    }
-   ],
-   "source": [
-    "gl = np.array((1,2)(3,4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gl =np.ones((3,3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for i in gl:\n",
-    "    i.std()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(np.array(X)) == np.ndarray"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def std(X,cat):\n",
-    "    std = []\n",
-    "    Xt = list(map(list, zip(*X)))\n",
-    "    if type(Xt) == np.ndarray:\n",
-    "        for x,i in enumerate(Xt):\n",
-    "            if cat[x]:\n",
-    "                std.append(-1)\n",
-    "            else:\n",
-    "                std.append(i.std())\n",
-    "    else:\n",
-    "        for x,i in enumerate(Xt):\n",
-    "            if cat[x]:\n",
-    "                std.append(-1)\n",
-    "            else:\n",
-    "                std.append(np.array(i).std())            \n",
-    "    return std"
    ]
   },
   {
@@ -1963,6 +1572,181 @@
    "outputs": [],
    "source": [
     "Xt = list(map(list, zip(*X)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "49.38624562248117\n",
+      "14\n",
+      "25.310319491813743\n",
+      "16\n",
+      "23.65377634033598\n",
+      "18\n",
+      "12.19209534512379\n",
+      "12\n",
+      "50.409209082007465\n",
+      "14\n",
+      "25.936449646229676\n",
+      "16\n",
+      "23.636389421087415\n",
+      "18\n",
+      "12.39875761736107\n",
+      "12\n",
+      "49.490671633957845\n",
+      "14\n",
+      "25.250169456103094\n",
+      "16\n",
+      "23.739119705283883\n",
+      "18\n",
+      "12.583314789960696\n"
+     ]
+    }
+   ],
+   "source": [
+    "from completeRun import cv_feature\n",
+    "from utils import stopwatch\n",
+    "did = 3\n",
+    "cv = 10\n",
+    "amount = 1\n",
+    "NonCat = [12,14,16,18]\n",
+    "amountList = [0.25,0.5,0.75,1.5]\n",
+    "amountList = [4,5,6]\n",
+    "for amount in amountList:\n",
+    "    for did in NonCat:\n",
+    "        print(did)\n",
+    "        with stopwatch() as sw:\n",
+    "            cv_feature(did,cv,amount)\n",
+    "        print(sw.duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from LocalDatasets import read_did,read_did_cat\n",
+    "from Noise2 import std_G \n",
+    "X,y = read_did(10)\n",
+    "cat = read_did_cat(10)\n",
+    "std_x = std_G(X,cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'0.0': 2, '1.0': 67, '2.0': 46, '3.0': 33},\n",
+       " {'0.0': 66, '1.0': 82},\n",
+       " {'0.0': 122, '1.0': 26},\n",
+       " {'0.0': 141, '1.0': 7},\n",
+       " {'0.0': 112, '1.0': 36},\n",
+       " {'0.0': 73, '1.0': 75},\n",
+       " {'0.0': 138, '1.0': 10},\n",
+       " {'0.0': 44, '1.0': 104},\n",
+       " 0.3124954345904643,\n",
+       " 0.83379582977850542,\n",
+       " {'0.0': 6, '1.0': 77, '2.0': 65},\n",
+       " {'0.0': 3, '1.0': 49, '2.0': 46, '3.0': 50},\n",
+       " {'0.0': 6, '1.0': 42, '2.0': 75, '3.0': 25},\n",
+       " {'0.0': 2,\n",
+       "  '1.0': 14,\n",
+       "  '2.0': 19,\n",
+       "  '3.0': 31,\n",
+       "  '4.0': 28,\n",
+       "  '5.0': 2,\n",
+       "  '6.0': 7,\n",
+       "  '7.0': 45},\n",
+       " {'0.0': 28, '1.0': 43, '2.0': 77},\n",
+       " {'0.0': 50, '1.0': 98},\n",
+       " {'0.0': 31, '1.0': 117},\n",
+       " 1.8985765110851129]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "std_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NonCat = [1038,\n",
+    " 1043,\n",
+    " 1046,\n",
+    " 1049,\n",
+    " 1050,\n",
+    " 1063,\n",
+    " 1067,\n",
+    " 1068,\n",
+    " 1120,\n",
+    " 1176,\n",
+    " 11,\n",
+    " 12,\n",
+    " 1459,\n",
+    " 1462,\n",
+    " 1464,\n",
+    " 1466,\n",
+    " 1467,\n",
+    " 1468,\n",
+    " 1475,\n",
+    " 1476,\n",
+    " 1478,\n",
+    " 1479,\n",
+    " 1485,\n",
+    " 1487,\n",
+    " 1489,\n",
+    " 1491,\n",
+    " 1492,\n",
+    " 1493,\n",
+    " 1494,\n",
+    " 1497,\n",
+    " 14,\n",
+    " 1501,\n",
+    " 1504,\n",
+    " 1510,\n",
+    " 1515,\n",
+    " 1570,\n",
+    " 16,\n",
+    " 18,\n",
+    " 22,\n",
+    " 28,\n",
+    " 300,\n",
+    " 30,\n",
+    " 32,\n",
+    " 36,\n",
+    " 375,\n",
+    " 37,\n",
+    " 39,\n",
+    " 40499,\n",
+    " 40509,\n",
+    " 40,\n",
+    " 4134,\n",
+    " 41,\n",
+    " 44,\n",
+    " 4538,\n",
+    " 458,\n",
+    " 53,\n",
+    " 54]"
    ]
   },
   {
