--- a/ExperimentRunning.ipynb
+++ b/ExperimentRunning.ipynb
@@ -1459,37 +1459,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "49.38624562248117\n",
-      "14\n",
-      "25.310319491813743\n",
-      "16\n",
-      "23.65377634033598\n",
-      "18\n",
-      "12.19209534512379\n",
-      "12\n",
-      "50.409209082007465\n",
-      "14\n",
-      "25.936449646229676\n",
-      "16\n",
-      "23.636389421087415\n",
-      "18\n",
-      "12.39875761736107\n",
-      "12\n",
-      "49.490671633957845\n",
-      "14\n",
-      "25.250169456103094\n",
-      "16\n",
-      "23.739119705283883\n",
-      "18\n",
-      "12.583314789960696\n"
+      "20\n",
+      "47.21774957629896\n",
+      "21\n",
+      "3.3076235886619543\n",
+      "26\n",
+      "25.05762067303658\n",
+      "333\n",
+      "1.7535140274194418\n",
+      "334\n",
+      "1.9106960505669122\n",
+      "335\n",
+      "1.7691357108960801\n",
+      "40668\n",
+      "5543.0849958224935\n",
+      "4135\n",
+      "3419.3433588835323\n",
+      "4534\n",
+      "50.01473206809169\n",
+      "469\n",
+      "2.359089261495683\n",
+      "46\n",
+      "17.728267517191853\n",
+      "50\n",
+      "2.7959170059293683\n",
+      "20\n",
+      "38.31331022292579\n",
+      "21\n",
+      "3.570287312646542\n",
+      "26\n",
+      "25.519936574666644\n",
+      "333\n",
+      "2.2279985799723363\n",
+      "334\n",
+      "2.33498334361866\n",
+      "335\n",
+      "2.006522135652631\n",
+      "40668\n",
+      "5775.71250075223\n",
+      "4135\n",
+      "3339.613453018559\n",
+      "4534\n",
+      "52.66506470587046\n",
+      "469\n",
+      "2.8032363899837947\n",
+      "46\n",
+      "17.269129879648972\n",
+      "50\n",
+      "2.8283732727286406\n",
+      "20\n",
+      "38.399325347781996\n",
+      "21\n",
+      "3.5962825552778668\n",
+      "26\n",
+      "25.48138455316075\n",
+      "333\n",
+      "2.2922953336455976\n",
+      "334\n",
+      "2.237945758191927\n",
+      "335\n",
+      "2.0220920376377762\n",
+      "40668\n",
+      "5874.4020142534355\n",
+      "4135\n",
+      "3317.8180575595616\n",
+      "4534\n",
+      "53.7265918494013\n",
+      "469\n",
+      "2.9102897291231784\n",
+      "46\n",
+      "17.20328481267643\n",
+      "50\n",
+      "2.79715882876917\n",
+      "20\n",
+      "38.508921578097215\n",
+      "21\n",
+      "3.528972211999644\n",
+      "26\n",
+      "25.511746235228202\n",
+      "333\n",
+      "1.8323595147085143\n",
+      "334\n",
+      "1.9286306407448137\n",
+      "335\n",
+      "1.8660020908500883\n",
+      "40668\n",
+      "5955.048899456662\n",
+      "4135\n",
+      "3474.5642214139298\n",
+      "4534\n",
+      "54.58897763272398\n",
+      "469\n",
+      "2.776358529459685\n",
+      "46\n",
+      "17.34844000087469\n",
+      "50\n",
+      "2.799826741924335\n",
+      "20\n",
+      "38.83877715437848\n",
+      "21\n",
+      "3.562902152109018\n",
+      "26\n",
+      "25.614793272885436\n",
+      "333\n",
+      "2.265457125620742\n",
+      "334\n",
+      "2.2306142451343476\n",
+      "335\n",
+      "2.117983432719484\n",
+      "40668\n",
+      "6024.718902530905\n",
+      "4135\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-8b4e36517368>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdid\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mwith\u001b[0m \u001b[0mstopwatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msw\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m             \u001b[0mcv_feature\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdid\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcv\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mamount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mduration\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\S127788\\Documents\\GitHub\\Primitive_annotations\\completeRun.py\u001b[0m in \u001b[0;36mcv_feature\u001b[1;34m(did, cv, amount)\u001b[0m\n\u001b[0;32m    339\u001b[0m             \u001b[0mcv_clf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclfs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclfName\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    340\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0mstopwatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msw\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 341\u001b[1;33m                 \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv_clf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    342\u001b[0m             \u001b[0mtime\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0msw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mduration\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    343\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0mstopwatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msw\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\base.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    187\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    188\u001b[0m         \u001b[0mseed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrnd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miinfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'i'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 189\u001b[1;33m         \u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msolver_type\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkernel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_seed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mseed\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    190\u001b[0m         \u001b[1;31m# see comment on the other call to np.iinfo in this file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    191\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\base.py\u001b[0m in \u001b[0;36m_dense_fit\u001b[1;34m(self, X, y, sample_weight, solver_type, kernel, random_seed)\u001b[0m\n\u001b[0;32m    254\u001b[0m                 \u001b[0mcache_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcache_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcoef0\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcoef0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    255\u001b[0m                 \u001b[0mgamma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_gamma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepsilon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mepsilon\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 256\u001b[1;33m                 max_iter=self.max_iter, random_seed=random_seed)\n\u001b[0m\u001b[0;32m    257\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    258\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_warn_from_fit_status\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -1499,9 +1600,9 @@
     "did = 3\n",
     "cv = 10\n",
     "amount = 1\n",
-    "NonCat = [12,14,16,18]\n",
-    "amountList = [0.25,0.5,0.75,1.5]\n",
-    "amountList = [4,5,6]\n",
+    "NonCat = [20, 21, 26, 333, 334, 335, 40668, 4135, 4534, 469, 46, 50]\n",
+    "# NonCat = [40668, 4135, 4534, 469, 46, 50]\n",
+    "amountList = [0.5,0.6,0.7,0.8,0.9,1,1.5,2]\n",
     "for amount in amountList:\n",
     "    for did in NonCat:\n",
     "        print(did)\n",
@@ -1573,6 +1674,23 @@
     " 458,\n",
     " 53,\n",
     " 54]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NonCat = [20, 21, 26, 333, 334, 335, 40668, 4135, 4534, 469, 46, 50]\n",
+    "# NonCat = [40668, 4135, 4534, 469, 46, 50]\n",
+    "amountList = [1,2,1.4,1.6]\n",
+    "for amount in amountList:\n",
+    "    for did in NonCat:\n",
+    "        print(did)\n",
+    "        with stopwatch() as sw:\n",
+    "            cv_feature(did,cv,amount)\n",
+    "        print(sw.duration)"
    ]
   },
   {
