--- a/ExperimentRunning.ipynb
+++ b/ExperimentRunning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "        if filename.endswith('cat.csv'): \n",
     "            list_of_files.append(int(filename[:-7]))\n",
     "set_of_filesDone = []\n",
-    "func = 'cvScoreNoise3'\n",
+    "func = 'cvScoreNoise6'\n",
     "clfName = 'AdaBoost'\n",
     "amount = 4\n",
     "path =  'D:\\\\DropboxFolder\\\\Dropbox\\\\afstudeer\\\\results\\\\' + func + '\\\\' + clfName + '\\\\' + str(amount) + '\\\\'\n",
@@ -41,10 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "list_of_filesDone = []\n",
@@ -1009,241 +1007,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "777.3238722480601\n",
-      "658.5245301995747\n",
-      "719.4389685126534\n",
-      "782.4206616555239\n",
-      "75.4029481863181\n",
-      "79.60077821519917\n",
-      "83.76370611809762\n",
-      "85.86338222719132\n",
-      "1445.9627350518276\n",
-      "1466.8555095742122\n",
-      "1483.1248745698285\n",
-      "1499.5502865942399\n",
-      "12.136943856265134\n",
-      "12.591950170342898\n",
-      "13.852831398056878\n",
-      "14.284902709103335\n",
-      "13.381668325073406\n",
-      "14.522953896277613\n",
-      "15.054678924418113\n",
-      "15.696845947259135\n",
-      "3.7654345003757044\n",
-      "3.9384975809662137\n",
-      "3.967583852198004\n",
-      "4.014157340167003\n",
-      "12.640306621080526\n",
-      "13.071222411774215\n",
-      "13.4507634971269\n",
-      "14.279817859762261\n",
-      "7.349454171748221\n",
-      "7.59993944830785\n",
-      "7.836400337186205\n",
-      "8.008160949942976\n",
-      "2252.6134469540593\n",
-      "2264.6678949610105\n",
-      "2310.173635942516\n",
-      "2306.8446723141133\n",
-      "331.11926677405427\n",
-      "364.9447598761544\n",
-      "397.56176529175355\n",
-      "434.19116701024177\n",
-      "2.8428235748579027\n",
-      "2.9536499655077932\n",
-      "2.8862225307384506\n",
-      "2.906464896113903\n",
-      "92.17061115690012\n",
-      "100.33654845091223\n",
-      "109.16302400189306\n",
-      "117.8863942027092\n",
-      "169.79476988258102\n",
-      "172.86941173890955\n",
-      "176.25360802716023\n",
-      "179.9519085212305\n",
-      "4.764410066505661\n",
-      "4.465406463728868\n",
-      "5.04005135231273\n",
-      "4.936520087721874\n",
-      "3.7631052661818103\n",
-      "3.9066183745890157\n",
-      "3.800575940826093\n",
-      "3.8459216009578086\n",
-      "38.17661967613094\n",
-      "39.32182104782987\n",
-      "40.642529959797685\n",
-      "41.97035112983576\n",
-      "4.669382162814145\n",
-      "4.913343904219801\n",
-      "4.98166701887385\n",
-      "5.13922270846524\n",
-      "80.52517396948679\n",
-      "89.20275393574411\n",
-      "97.33448652118386\n",
-      "105.80324805248529\n",
-      "122.80907417022536\n",
-      "134.14826767580234\n",
-      "144.5242498331063\n",
-      "156.58442832531\n",
-      "2372.8858866507726\n",
-      "2568.68079881584\n",
-      "2749.24696880002\n",
-      "2925.71622435475\n",
-      "1774.1534957406257\n",
-      "2016.4103389448574\n",
-      "2245.2485646963105\n",
-      "2475.828351347227\n",
-      "29.228051294463512\n",
-      "31.677022498821316\n",
-      "33.90473231533542\n",
-      "36.23218961543171\n",
-      "236.62226613541134\n",
-      "260.87913966215274\n",
-      "284.0448549021894\n",
-      "308.48921755365154\n",
-      "37.97168392016465\n",
-      "40.72956811902259\n",
-      "43.29819049338403\n",
-      "45.48876178320643\n",
-      "20.409297250495\n",
-      "20.977087855470018\n",
-      "22.629817836437724\n",
-      "23.28008749672881\n",
-      "30.543033453177486\n",
-      "32.459466986503685\n",
-      "33.93797183553397\n",
-      "35.58046074332378\n",
-      "44.666084474738454\n",
-      "48.02985552963946\n",
-      "51.27596130476013\n",
-      "54.33740494481026\n",
-      "32.089019384467974\n",
-      "33.84310580731835\n",
-      "36.091795992113475\n",
-      "37.93486541243328\n",
-      "6.834497017429385\n",
-      "7.243421534476511\n",
-      "7.674206238691113\n",
-      "8.435939995048102\n",
-      "43.5230593252636\n",
-      "47.322078089295246\n",
-      "50.803668835425924\n",
-      "53.85394446691498\n",
-      "46.46849469332665\n",
-      "50.6400267211211\n",
-      "54.64574554387946\n",
-      "58.92547336915595\n",
-      "33.336430892930366\n",
-      "36.25788443210331\n",
-      "39.335969524487155\n",
-      "42.6895582852012\n",
-      "19.542398080258863\n",
-      "21.178007979942777\n",
-      "21.812553326773923\n",
-      "22.774585829691205\n",
-      "5.715565190330381\n",
-      "6.048941441658826\n",
-      "6.26160150362557\n",
-      "6.47505648148217\n",
-      "57.572883384811576\n",
-      "63.70090076473571\n",
-      "69.82517401614314\n",
-      "75.78186602774804\n",
-      "59.370652395504294\n",
-      "60.314361247292254\n",
-      "61.23538187451777\n",
-      "61.53158274566522\n",
-      "43.12318957204843\n",
-      "46.459554221983126\n",
-      "50.123354246527015\n",
-      "53.64588456085767\n",
-      "20.97437095981877\n",
-      "21.2380721796726\n",
-      "21.358975435512548\n",
-      "21.569952832185663\n",
-      "43.14762064038223\n",
-      "46.299365140228474\n",
-      "48.57877014754922\n",
-      "51.08392613813339\n",
-      "165.98310383869102\n",
-      "179.1416848951485\n",
-      "192.19564960816933\n",
-      "205.25024362959084\n",
-      "1318.7591917981845\n",
-      "1462.563432562536\n",
-      "1612.7215070000602\n",
-      "1767.5453678188715\n",
-      "228.95820906940935\n",
-      "232.75204175360705\n",
-      "236.07150277822802\n",
-      "239.33578152502014\n",
-      "519.7589132977155\n",
-      "533.3828914879123\n",
-      "548.1874126187322\n",
-      "561.6054296860966\n",
-      "27.20467824798834\n",
-      "29.017664953207714\n",
-      "29.463738259946695\n",
-      "30.74416816762823\n",
-      "147.1994856371748\n",
-      "148.42746975565387\n",
-      "155.77603244599595\n",
-      "160.73748695550603\n",
-      "4.396592591132503\n",
-      "4.493024193157908\n",
-      "4.551247117618914\n",
-      "4.607420707834535\n",
-      "2.8096997466491302\n",
-      "2.9005818653677125\n",
-      "2.8798338140622946\n",
-      "2.8504858363594394\n",
-      "55.17018617547001\n",
-      "60.13738703120907\n",
-      "64.89733689179411\n",
-      "69.83344552657218\n",
-      "3.4497819812531816\n",
-      "3.5153499472507974\n",
-      "3.572852129320381\n",
-      "3.617108512087725\n",
-      "4.003038314098376\n",
-      "4.1562518222635845\n",
-      "4.278026500003762\n",
-      "4.438137209755951\n",
-      "1013.3846436616877\n",
-      "1121.1695116165356\n",
-      "1231.7266366333934\n",
-      "1346.843774301742\n",
-      "2.750107644867967\n",
-      "2.8101676460792078\n",
-      "2.724505661681178\n",
-      "2.7014386391674634\n",
-      "59.5620144027198\n",
-      "62.85227393063542\n",
-      "66.9141906016157\n",
-      "71.9110053400218\n",
-      "259.3405444894015\n",
-      "280.8721207040653\n",
-      "303.4401058395015\n",
-      "325.44425768897054\n",
-      "9.796419426376815\n",
-      "10.582399517079466\n",
-      "11.116861966875149\n",
-      "11.757135932944948\n",
-      "2.708543899731012\n",
-      "2.7189361188939074\n",
-      "2.7889983453205787\n",
-      "2.8007214888057206\n",
-      "6.470725962528377\n",
-      "6.641963628862868\n",
-      "6.750241530346102\n",
-      "6.847198877789197\n"
+      "86.58279359516933\n",
+      "99.17336277868588\n",
+      "111.62993274965106\n",
+      "122.50194343058877\n",
+      "6.285241589974476\n",
+      "6.426380554124989\n",
+      "6.632827369623101\n",
+      "6.947866051635742\n",
+      "48.79920060905977\n",
+      "54.09001078543338\n",
+      "57.7335568791658\n",
+      "60.436644909200936\n",
+      "3.8218313591139577\n",
+      "4.130273293177197\n",
+      "4.0458226971793465\n",
+      "4.086944960702112\n",
+      "3.995513222418822\n",
+      "4.099099565597044\n",
+      "4.042602461616525\n",
+      "4.056944475544242\n",
+      "3.7782380557857778\n",
+      "3.946796371765231\n",
+      "3.868192394963444\n",
+      "3.992073266306761\n"
      ]
     }
    ],
@@ -1254,11 +1048,13 @@
     "did = 1050\n",
     "cv = 10\n",
     "amount = 2\n",
-    "typ = 3\n",
+    "typ = 2\n",
     "features = readDict(did)['NumberOfFeatures']\n",
     "# count = 2\n",
-    "amountList = range(1,features)\n",
+    "# amountList = range(1,features)\n",
     "amountList = [0.25,0.5,0.75,1]\n",
+    "NonCat = [20, 21, 26, 333, 334, 335]\n",
+    "# [3,14,18,20, 21, 26, 333, 334, 335]\n",
     "for did in NonCat:\n",
     "    for amount in amountList:\n",
     "        with stopwatch() as sws:\n",
@@ -1738,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,6 +1612,26 @@
     "        with stopwatch() as sw:\n",
     "            cv_feature(did,cv,amount)\n",
     "        print(sw.duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(listNeedTodo)"
    ]
   },
   {
