Added: error slope, tables

--- a/ExperimentRunning.ipynb
+++ b/ExperimentRunning.ipynb
@@ -1373,49 +1373,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40668\n",
-      "5813.748447357095\n",
-      "4135\n",
-      "2133.024836688506\n",
-      "4534\n",
-      "52.97185206403083\n",
-      "469\n",
-      "2.3431591577391373\n",
-      "46\n",
-      "16.5887620049034\n",
-      "50\n",
-      "2.423612954444252\n",
-      "40668\n",
-      "5800.243703708184\n",
-      "4135\n",
-      "2134.890352364673\n",
-      "4534\n",
-      "53.027930544965784\n",
-      "469\n",
-      "2.2926022215979174\n",
-      "46\n",
-      "16.60044467190164\n",
-      "50\n",
-      "2.4311148099659476\n",
-      "40668\n",
-      "5813.20751230522\n",
-      "4135\n",
-      "2014.5481691339373\n",
-      "4534\n",
-      "53.122414924771874\n",
-      "469\n",
-      "2.376708280411549\n",
-      "46\n",
-      "16.75548084230104\n",
-      "50\n",
-      "2.4774704084702535\n"
+      "3\n",
+      "12.039095209816324\n",
+      "3\n",
+      "9.772067066210179\n",
+      "3\n",
+      "9.80274004682748\n",
+      "3\n",
+      "10.495103827043408\n",
+      "3\n",
+      "10.401232405289576\n",
+      "3\n",
+      "10.53298146633744\n",
+      "3\n",
+      "12.602055035120614\n",
+      "3\n",
+      "10.511612870420166\n",
+      "3\n",
+      "10.82142438957031\n",
+      "3\n",
+      "11.209610596688862\n",
+      "3\n",
+      "11.140290714788534\n",
+      "3\n",
+      "10.612071768551516\n"
      ]
     }
    ],
@@ -1427,8 +1415,8 @@
     "amount = 1\n",
     "amountList = [0,0.25, 0.5,0.75]\n",
     "# NonCat = [20, 21, 26, 333, 334, 335, 40668, 4135, 4534, 469, 46, 50]\n",
-    "NonCat = [40668, 4135, 4534, 469, 46, 50]\n",
-    "amountList = [4,5,6]\n",
+    "NonCat = [3]\n",
+    "amountList = [0.5,0.6,0.7,0.75,0.8,0.9,1,2,3,4,5,6]\n",
     "# NonCat = [12,14,16,18,22,28,30,32,36,37]\n",
     "# amountList = [0.7]\n",
     "for amount in amountList:\n",
