Added: feature importance analysis start

--- a/Showing.ipynb
+++ b/Showing.ipynb
@@ -1901,6 +1901,194 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>correlation initial</th>\n",
+       "      <th>correlation duplicate</th>\n",
+       "      <th>NumberOfFeatures</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0.02</td>\n",
+       "      <td>8.46e-03</td>\n",
+       "      <td>241.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>0.43</td>\n",
+       "      <td>1.67e-01</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>0.17</td>\n",
+       "      <td>3.18e-01</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>333</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>3.38e-01</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>0.33</td>\n",
+       "      <td>1.39e-02</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>0.50</td>\n",
+       "      <td>2.78e-02</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4135</th>\n",
+       "      <td>0.51</td>\n",
+       "      <td>3.14e-01</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4534</th>\n",
+       "      <td>0.14</td>\n",
+       "      <td>1.37e-01</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>469</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>6.56e-01</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>0.09</td>\n",
+       "      <td>5.11e-02</td>\n",
+       "      <td>61.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>0.38</td>\n",
+       "      <td>1.37e-03</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      correlation initial  correlation duplicate  NumberOfFeatures\n",
+       "20                   0.02               8.46e-03             241.0\n",
+       "21                   0.43               1.67e-01               7.0\n",
+       "26                   0.17               3.18e-01               9.0\n",
+       "333                  0.20               3.38e-01               7.0\n",
+       "334                  0.33               1.39e-02               7.0\n",
+       "335                  0.50               2.78e-02               7.0\n",
+       "4135                 0.51               3.14e-01              10.0\n",
+       "4534                 0.14               1.37e-01              31.0\n",
+       "469                  0.20               6.56e-01               5.0\n",
+       "46                   0.09               5.11e-02              61.0\n",
+       "50                   0.38               1.37e-03              10.0"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "did = 333\n",
+    "\n",
+    "# print('value between 0 and 1 giving the correlation between feature importance, first is correlation with initial dataset, second is correlation between features')\n",
+    "for i,did in enumerate(Cat):\n",
+    "    X,y = read_did(did)\n",
+    "    output = [0,0]\n",
+    "    cat = read_did_cat(did)\n",
+    "    clf = RandomForestClassifier()\n",
+    "    _= clf.fit(X, y)\n",
+    "    output[0] = clf.feature_importances_\n",
+    "    amount = readDict(did)['NumberOfFeatures'] - 1\n",
+    "    X = add_copy(X,amount)\n",
+    "    clf = RandomForestClassifier()\n",
+    "    _= clf.fit(X, y)\n",
+    "    output[1] = clf.feature_importances_\n",
+    "    count1.append(0)\n",
+    "    count2.append(0)\n",
+    "    for j,x in enumerate(output[0]):\n",
+    "        if output[0][j] > output[1][j] + output[1][j+len(output[0])] - output[0][j]*0.05 and output[0][j] < output[1][j] + output[1][j+len(output[0])] + output[0][j]*0.05:\n",
+    "            count1[i] = count1[i] + 1\n",
+    "        if output[1][j] + 0.05*output[1][j+len(output[0])] > output[1][j+len(output[0])] and output[1][j] < output[1][j+len(output[0])] + 0.05*output[1][j]:\n",
+    "            count2[i] = count2[i] + 1\n",
+    "    count1[i] = count1[i]/amount\n",
+    "    count2[i] = count2[i]/amount\n",
+    "#     print(did,count1/amount,count2/amount)\n",
+    "data = np.ones((11,3))\n",
+    "for i,x in enumerate(Cat):\n",
+    "    data[i][0] = array1[i]\n",
+    "    data[i][1] = array2[i]\n",
+    "    data[i][2] = readDict(Cat[i])['NumberOfFeatures']\n",
+    "array1 = np.array(count1)\n",
+    "array2 = np.array(count2)\n",
+    "Cat = np.array(Cat)\n",
+    "ind = 1\n",
+    "df = pd.DataFrame(data,columns=['correlation initial','correlation duplicate','NumberOfFeatures'],index=Cat)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis Feature Importance\n",
+    "An initial analysis of feature importance shows little direct correlation between duplicated features. High correlations are found in datasets with only a few features. The first correlation is calculated as either the feature splitting up. The second correlation is calculated as only a small difference between the importance of a features.\n",
+    "##### side note- there seems to a lot of differency between runs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
