updated: report chapters

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -142,10 +142,19 @@ To improve existing automated picking of a machine learning algorithm
 
 
 \section{Introduction} \label{Chapter1}
+This report is the result of my graduation project which completes my Business Information Systems study at Eindhoven University of Technology.
+The project was performed internally at the University in the Data mining department.
+In this project we investigated annotations of primitives, more specifically primitives in the scikit-learn library.
+In the problem description we will briefly explain more about primitives and the annotations.
+To elaborate on this we will outline the research questions and thesis structure
+ 
+
+\subsection{problem description}
 
 
-\subsection{Problem definition}
+\subsection{research question}
 
+\subsection{thesis structure}
 
 \subsection{Outline}
 
@@ -156,7 +165,9 @@ To improve existing automated picking of a machine learning algorithm
 Before we discuss in detail the solutions for the steps of our approach, this chapter provides
 some background knowledge and definitions which are required for a good understanding of
 the remainder of this thesis.
-\subsection{Sklearn}
+\subsection{Sklearn/scikit-learn library}
+
+\subsection{Terminology}
 
 \newpage
 \section{Experimental setup} \label{Chapter3}
