--- a/doc/main.tex
+++ b/doc/main.tex
@@ -150,7 +150,7 @@ To elaborate on this we will outline the research questions and thesis structure
  
 
 \subsection{problem description}
-
+%explain the need for automation and then the boost of information, I try to give.
 
 \subsection{research question}
 
@@ -166,6 +166,8 @@ Before we discuss in detail the solutions for the steps of our approach, this ch
 some background knowledge and definitions which are required for a good understanding of
 the remainder of this thesis.
 \subsection{Sklearn/scikit-learn library}
+%subsubsections for algorithms?
+% Include the chart of sklearn which algorithm to pick
 
 \subsection{Terminology}
 
